--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "dotenv": "^8.0.0",
     "shipit-cli": "^4.2.0",
     "shipit-deploy": "^4.1.4"
+  },
+  "dependencies": {
+    "purecss": "^1.0.0",
+    "yarn": "^1.16.0"
   }
 }
